--- a/jsconcept/eventbubbling.html
+++ b/jsconcept/eventbubbling.html
@@ -18,3 +18,7 @@
 Button clicked
 Inner div clicked
 Outer div clicked -->
+<!-- 
+Event bubbling is the process in javascript where an 
+event triggered on a child element propagates up the 
+DOM tree, triggering event handles on its parent elements. -->
