--- a/jsconcept/eventcapturing.html
+++ b/jsconcept/eventcapturing.html
@@ -14,3 +14,8 @@
 </script>
 <!-- Capturing: Outer
 Capturing: Inner -->
+
+<!-- 
+Event capturing is the process in javascript where an 
+event is handled starting from the highest-level ancestor
+(the root of the DOM Tree) and moving down to the target element. -->
